# soc-validation

./: .dockerignore  .env.example  .env.worker.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prefect  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  worker-compose.yml
.serena/: project.yml
.spec-workflow/specs/soc-validation/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
config/: boards.example.yaml  boards.yaml
docs/: openapi.json  openapi.yaml
scripts/: init_prefect.py  setup_work_pool.py  test_api_openapi.py  test_device_manager.py  validate_openapi.py
src/device_manager/: __init__.py  api.py  config.py  lock_manager.py  manager.py  models.py  redis_client.py
src/device_manager/drivers/: __init__.py  telnet_driver.py
src/flows/: test_execution.py
src/notifications/: api.py  notifier.py
src/tasks/: board_tasks.py  test_tasks.py
src/utils/: constants.py  logging.py
tests/integration/: test_redis_lock_integration.py
tests/mocks/: __init__.py  mock_telnet_server.py
tests/unit/: test_board_config.py  test_config.py  test_device_manager.py  test_device_manager_api.py  test_lock_manager.py  test_models.py  test_notifications.py  test_telnet_driver.py
